Test: 타임라인 앨범 도메인 테스트 작성 [S13P11D207-178]